Trying to join both programs.

--- a/minishell_rramos/.vscode/tasks.json
+++ b/minishell_rramos/.vscode/tasks.json
@@ -7,6 +7,15 @@
             "args": [
                 "-g",
                 "./*.c",
+				"./builtin/*.c",
+				"./sysfuncs/*.c",
+				"./utils/*.c",
+				"./commands/*.c",
+				"./environment/*.c",
+				"./terminal/*.c",
+				"-I../includes",
+				"-L../libs/libft/",
+				"-lft",
                 "-lncurses",
                 "-o",
                 "${fileDirname}/${workspaceFolderBasename}",
