--- a/minishell_rramos/Makefile
+++ b/minishell_rramos/Makefile
@@ -2,28 +2,22 @@ clear_terminal := clear
 compile := gcc
 compile_option := -c
 enable_warnings := -Wall -Wextra
-header_file := ./minishell.h
+#header_file := ./minishell.h
 library_option := -l
 new_curses_library := ncurses # https://en.wikipedia.org/wiki/Ncurses
 NAME := minishell
 norminette := norminette
-object_files := \
-allocate_memory.o \
-calculate_string_length.o \
-format_environment.o \
-free_memory.o \
-handle_commands.o \
-handle_signals.o \
-main.o \
-open_terminal.o \
-print_error_message.o \
-print_message.o \
-read_input_until_new_line.o
 output_name_option := -o
 program_file := ./${NAME}
 remove_file := rm
 remove_file_option := -f
-source_files := $(object_files:.o=.c)
+rwildcard=$(foreach d,$(wildcard $(1:=/*)),$(call rwildcard,$d,$2) $(filter $(subst *,%,$2),$d))
+source_files := $(call rwildcard,src,*.c)
+object_files := $(source_files:.c=.o)
+include_dirs := includes libs/libft/
+includes := $(addprefix -I, $(include_dirs))
+libft = -L libs/libft -lft
+readline = -lreadline
 turn_warnings_into_errors := -Werror
 
 default_rule: clear_terminal remove_program norminette compile execute_program
@@ -41,22 +35,27 @@ norminette:
 		exit 1;\
 	fi
 
-compile: ${program_file}
+compile: libft.a ${program_file}
 
 execute_program:
 	@${program_file}
 
+libft.a:
+	make -C libs/libft/
+	make bonus -C libs/libft/
+
 # The "all", "${NAME}", "clean", "fclean" and "re" make rules are mandatory
 # by 42's Norm (version 3 at the time of writting this comment).
 
-all: ${program_file}
+all: libft.a ${program_file}
 
 %.o: %.c
 	@${compile} \
 		${enable_warnings} \
 		${turn_warnings_into_errors} \
 		${compile_option} $< \
-		${output_name_option} $@
+		${output_name_option} $@ \
+		${includes} 
 
 ${NAME}: ${object_files}
 	@${compile} \
@@ -64,12 +63,15 @@ ${NAME}: ${object_files}
 		${turn_warnings_into_errors} \
 		${output_name_option} ${program_file} \
 		${object_files} \
-		${library_option}${new_curses_library}
+		${library_option}${new_curses_library}\
+		${includes} ${libft} ${readline}
 
 clean:
+	make clean -C ./libs/libft
 	@${remove_file} ${remove_file_option} ${object_files}
 
 fclean: clean
+	make fclean -C ./libs/libft
 	@${remove_file} ${remove_file_option} ${program_file}
 
 re: fclean all
