Working on builtin functions0

--- a/minishell_rramos/.vscode/tasks.json
+++ b/minishell_rramos/.vscode/tasks.json
@@ -17,8 +17,9 @@
 				"-L../libs/libft/",
 				"-lft",
                 "-lncurses",
+				"-lreadline",
                 "-o",
-                "${fileDirname}/${workspaceFolderBasename}",
+                "${workspaceFolder}/minishell",
                 "-Wall",
                 "-Werror",
                 "-Wextra"
